--- a/package.json
+++ b/package.json
@@ -21,8 +21,22 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "admin-lte": "2.4.3",
+    "angular2-text-mask": "^8.0.4",
+    "bootstrap": "^3.3.7",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
-    "rxjs": "^5.4.2",
+    "cross-storage": "1.0.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
+    "moment": "^2.22.2",
+    "ng2-currency-mask": "^5.3.1",
+    "ng2-dual-list-box": "^1.0.5",
+    "ng2-file-upload": "^1.3.0",
+    "ng2-select": "^2.0.0",
+    "ngx-bootstrap": "2.0.0-beta.11",
+    "rxjs": "^5.5.6",
+    "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
@@ -45,5 +59,27 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
     "typescript": "~2.3.3"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.6.6",
+    "@angular/compiler-cli": "^5.2.5",
+    "@angular/language-service": "^4.3.4",
+    "@types/jasmine": "~2.5.53",
+    "@types/jasminewd2": "~2.0.2",
+    "@types/jquery": "^3.2.15",
+    "@types/node": "~6.0.60",
+    "codelyzer": "~3.1.1",
+    "jasmine-core": "~2.6.2",
+    "jasmine-spec-reporter": "~4.1.0",
+    "karma": "~1.7.0",
+    "karma-chrome-launcher": "~2.1.1",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
+    "protractor": "~5.1.2",
+    "ts-node": "~3.2.0",
+    "tslint": "~5.3.2",
+    "typescript": "^2.7.0"
   }
 }
